--- a/concourse/pipeline/res_def.yml
+++ b/concourse/pipeline/res_def.yml
@@ -21,23 +21,23 @@ resources:
 - name: postgresql-hll_pr
   type: pull-request
   # We should rely on the webhook. See README if webhook doesn't work
-  webhook_token: ((postgresql-hll-webhook-token))
+  webhook_token: ((extension/extensions-webhook-token))
   check_every: 24h
   source:
     disable_forks: false
     repository: liuxueyang/postgresql-hll
-    access_token: ((github-access-token))
+    access_token: ((extension/github-access-token))
     base_branch: gpdb
 # Commit trigger
 - name: postgresql-hll_commit
   type: git
   # We should rely on the webhook. See README if webhook doesn't work
-  webhook_token: ((postgresql-hll-webhook-token))
+  webhook_token: ((extension/extensions-webhook-token))
   check_every: 1h
   source:
     branch: ((postgresql-hll-branch))
     uri: https://github.com/liuxueyang/postgresql-hll.git
-    username: ((github-access-token))
+    username: ((extension/github-access-token))
     password: x-oauth-basic
 # Commit dev trigger. Not using webhook
 - name: postgresql-hll_commit_dev
@@ -46,7 +46,7 @@ resources:
   source:
     branch: ((postgresql-hll-branch))
     uri: https://github.com/liuxueyang/postgresql-hll.git
-    username: ((github-access-token))
+    username: ((extension/github-access-token))
     password: x-oauth-basic
 
 
@@ -87,14 +87,14 @@ resources:
     repository: gcr.io/data-gpdb-private-images/gpdb6-rhel8-build
     tag: latest
     username: _json_key
-    password: ((container-registry-readonly-service-account-key))
+    password: ((data-gpdb-private-images-container-registry-readonly-service-account-key))
 - name: rhel8-gpdb6-image-test
   type: registry-image
   source:
     repository: gcr.io/data-gpdb-private-images/gpdb6-rhel8-test
     tag: latest
     username: _json_key
-    password: ((container-registry-readonly-service-account-key))
+    password: ((data-gpdb-private-images-container-registry-readonly-service-account-key))
 # Ubuntu18
 - name: ubuntu18-gpdb6-image-build
   type: registry-image
@@ -106,14 +106,6 @@ resources:
   source:
     repository: gcr.io/data-gpdb-public-images/gpdb6-ubuntu18.04-test
     tag: latest
-# clang_format
-- name: clang-format-image
-  type: registry-image
-  source:
-    repository: gcr.io/data-gpdb-extensions/common/clang-format
-    tag: 13
-    username: _json_key
-    password: ((extensions-gcs-service-account-key))
 
 # gpdb binary on gcs is located as different folder for different version
 # Latest build with assertion enabled:
@@ -204,28 +196,28 @@ resources:
   type: gcs
   source:
     bucket: gpdb-extensions-concourse-resources
-    json_key: ((extensions-gcs-service-account-key))
+    json_key: ((extension/extensions-gcs-service-account-key))
     versioned_file: intermediates/postgresql-hll/postgresql-hll_rhel6_gpdb6.tar.gz
 
 - name: bin_postgresql-hll_gpdb6_rhel7_intermediates
   type: gcs
   source:
     bucket: gpdb-extensions-concourse-resources
-    json_key: ((extensions-gcs-service-account-key))
+    json_key: ((extension/extensions-gcs-service-account-key))
     versioned_file: intermediates/postgresql-hll/postgresql-hll_rhel7_gpdb6.tar.gz
 
 - name: bin_postgresql-hll_gpdb6_rhel8_intermediates
   type: gcs
   source:
     bucket: gpdb-extensions-concourse-resources
-    json_key: ((extensions-gcs-service-account-key))
+    json_key: ((extension/extensions-gcs-service-account-key))
     versioned_file: intermediates/postgresql-hll/postgresql-hll_rhel8_gpdb6.tar.gz
 
 - name: bin_postgresql-hll_gpdb6_ubuntu18_intermediates
   type: gcs
   source:
     bucket: gpdb-extensions-concourse-resources
-    json_key: ((extensions-gcs-service-account-key))
+    json_key: ((extension/extensions-gcs-service-account-key))
     versioned_file: intermediates/postgresql-hll/postgresql-hll_ubuntu18_gpdb6.tar.gz
 
 # Rel
@@ -233,28 +225,28 @@ resources:
   type: gcs
   source:
     bucket: gpdb-extensions-concourse-resources
-    json_key: ((extensions-gcs-service-account-key))
+    json_key: ((extension/extensions-gcs-service-account-key))
     versioned_file: intermediates_release/postgresql-hll/postgresql-hll_rhel6_gpdb6.tar.gz
 
 - name: bin_postgresql-hll_gpdb6_rhel7_intermediates_rel
   type: gcs
   source:
     bucket: gpdb-extensions-concourse-resources
-    json_key: ((extensions-gcs-service-account-key))
+    json_key: ((extension/extensions-gcs-service-account-key))
     versioned_file: intermediates_release/postgresql-hll/postgresql-hll_rhel7_gpdb6.tar.gz
 
 - name: bin_postgresql-hll_gpdb6_rhel8_intermediates_rel
   type: gcs
   source:
     bucket: gpdb-extensions-concourse-resources
-    json_key: ((extensions-gcs-service-account-key))
+    json_key: ((extension/extensions-gcs-service-account-key))
     versioned_file: intermediates_release/postgresql-hll/postgresql-hll_rhel8_gpdb6.tar.gz
 
 - name: bin_postgresql-hll_gpdb6_ubuntu18_intermediates_rel
   type: gcs
   source:
     bucket: gpdb-extensions-concourse-resources
-    json_key: ((extensions-gcs-service-account-key))
+    json_key: ((extension/extensions-gcs-service-account-key))
     versioned_file: intermediates_release/postgresql-hll/postgresql-hll_ubuntu18_gpdb6.tar.gz
 
 # For uploading to the release bucket
@@ -290,4 +282,4 @@ resources:
 - name: slack_notify
   type: slack-alert
   source:
-    url: ((extensions-slack-webhook))
+    url: ((extension/extensions-slack-webhook))
