--- a/concourse/pipeline/res_def.yml
+++ b/concourse/pipeline/res_def.yml
@@ -113,25 +113,25 @@ resources:
 - name: bin_gpdb6_centos6_debug
   type: gcs
   source:
-    bucket: ((gcs-bucket))
+    bucket: pivotal-gpdb-concourse-resources-prod
     json_key: ((concourse-gcs-resources-service-account-key))
     regexp: server/published/gpdb6/server-rc-(.*)-rhel6_x86_64.debug.tar.gz
 - name: bin_gpdb6_centos7_debug
   type: gcs
   source:
-    bucket: ((gcs-bucket))
+    bucket: pivotal-gpdb-concourse-resources-prod
     json_key: ((concourse-gcs-resources-service-account-key))
     regexp: server/published/gpdb6/server-rc-(.*)-rhel7_x86_64.debug.tar.gz
 - name: bin_gpdb6_rhel8_debug
   type: gcs
   source:
-    bucket: ((gcs-bucket))
+    bucket: pivotal-gpdb-concourse-resources-prod
     json_key: ((concourse-gcs-resources-service-account-key))
     regexp: server/published/gpdb6/server-rc-(.*)-rhel8_x86_64.debug.tar.gz
 - name: bin_gpdb6_ubuntu18_debug
   type: gcs
   source:
-    bucket: ((gcs-bucket))
+    bucket: pivotal-gpdb-concourse-resources-prod
     json_key: ((concourse-gcs-resources-service-account-key))
     regexp: server/published/gpdb6/server-rc-(.*)-ubuntu18.04_x86_64.debug.tar.gz
 # Latest release candidates, no fault-injector, no assertion:
@@ -139,25 +139,25 @@ resources:
 - name: bin_gpdb6_centos6
   type: gcs
   source:
-    bucket: ((gcs-bucket))
+    bucket: pivotal-gpdb-concourse-resources-prod
     json_key: ((concourse-gcs-resources-service-account-key))
     regexp: server/published/gpdb6/server-rc-(.*)-rhel6_x86_64.tar.gz
 - name: bin_gpdb6_centos7
   type: gcs
   source:
-    bucket: ((gcs-bucket))
+    bucket: pivotal-gpdb-concourse-resources-prod
     json_key: ((concourse-gcs-resources-service-account-key))
     regexp: server/published/gpdb6/server-rc-(.*)-rhel7_x86_64.tar.gz
 - name: bin_gpdb6_rhel8
   type: gcs
   source:
-    bucket: ((gcs-bucket))
+    bucket: pivotal-gpdb-concourse-resources-prod
     json_key: ((concourse-gcs-resources-service-account-key))
     regexp: server/published/gpdb6/server-rc-(.*)-rhel8_x86_64.tar.gz
 - name: bin_gpdb6_ubuntu18
   type: gcs
   source:
-    bucket: ((gcs-bucket))
+    bucket: pivotal-gpdb-concourse-resources-prod
     json_key: ((concourse-gcs-resources-service-account-key))
     regexp: server/published/gpdb6/server-rc-(.*)-ubuntu18.04_x86_64.tar.gz
 
@@ -224,28 +224,28 @@ resources:
 - name: bin_postgresql-hll_gpdb6_rhel6_release
   type: gcs
   source:
-    bucket: ((gcs-bucket))
+    bucket: pivotal-gpdb-concourse-resources-prod
     json_key: ((concourse-gcs-resources-service-account-key))
     regexp: postgresql-hll/released/gpdb6/postgresql-hll-(.*).tar.gz
 
 - name: bin_postgresql-hll_gpdb6_rhel7_release
   type: gcs
   source:
-    bucket: ((gcs-bucket))
+    bucket: pivotal-gpdb-concourse-resources-prod
     json_key: ((concourse-gcs-resources-service-account-key))
     regexp: postgresql-hll/released/gpdb6/postgresql-hll-(.*).tar.gz
 
 - name: bin_postgresql-hll_gpdb6_rhel8_release
   type: gcs
   source:
-    bucket: ((gcs-bucket))
+    bucket: pivotal-gpdb-concourse-resources-prod
     json_key: ((concourse-gcs-resources-service-account-key))
     regexp: postgresql-hll/released/gpdb6/postgresql-hll-(.*).tar.gz
 
 - name: bin_postgresql-hll_gpdb6_ubuntu18_release
   type: gcs
   source:
-    bucket: ((gcs-bucket))
+    bucket: pivotal-gpdb-concourse-resources-prod
     json_key: ((concourse-gcs-resources-service-account-key))
     regexp: postgresql-hll/released/gpdb6/postgresql-hll-(.*).tar.gz
 
